--- a/WS01_HTML/index.html
+++ b/WS01_HTML/index.html
@@ -6,6 +6,38 @@
     <body>
         <h1>Welcome to my Page</h1>
         <p>This is a paragraph.</p>
-        <img src="path/to/image.jpg" alt="Description of image">
+        <img src="./images/ASST6936.JPEG" alt="darra">
     </body>
     </html>
+
+    <h2>Ordered List</h2>
+    <ol>
+        <li>Kuntosali</li>
+        <li>videopelit</li>
+        <li>tietokoneet</li>
+    </ol>
+    
+<a href="https://www.zalando.fi/miehet-kengat/">Visit Laurea</a>
+
+<table>
+    <tr>
+        <th>bändi</th>
+        <th>onko se hyvä ?</th>
+    </tr>
+    <tr>
+        <td>Opeth</td>
+        <td>kyllä</td>
+    </tr>
+    <tr>
+        <td>Lorna Shore</td>
+        <td>kyllä</td>
+    </tr>
+    </table>
+
+<form>
+    <label for="name">Nimi:</label>
+    <input type="text" id="name" name="name"><br><br>
+    <label for="email">Sähköposti:</label>
+    <input type="email" id="email" name="email"><br><br>
+    <input type="submit" value="Submit">
+    </form>
