--- a/WS02_CSS/index.html
+++ b/WS02_CSS/index.html
@@ -42,3 +42,11 @@
         <td>kyllä</td>
     </tr>
     </table>
+
+    <form>
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name"><br><br>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email"><br><br>
+    <input type="submit" value="Submit">
+    </form>
