--- a/WS03_CSS-Advanced/index.html
+++ b/WS03_CSS-Advanced/index.html
@@ -14,7 +14,8 @@
         <h1 style="color: red;">Joni Tuunanen</h1>
         <h1>Welcome to my Page</h1>
         <p>You have just landed on the best page</p>
-        <img src="./images/ASST6936.JPEG" alt="darra">
+        <img src="./images/ASST6936.JPEG" alt="darra" class="filter-image">
+
     </body>
 
     <h2>Ordered List</h2>
@@ -53,5 +54,16 @@
     <button class="transition-button">Hover me</button>
 
     <div class="animation-box"></div>
+
+    <ul class="pseudo-list">
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+      </ul>
+
+      <blockquote class="quote">
+        "The only way to do great work is to love what you do." - Steve Jobs
+      </blockquote>
 
     </html>
