--- a/WS03_CSS-Advanced/index.html
+++ b/WS03_CSS-Advanced/index.html
@@ -56,10 +56,10 @@
     <div class="animation-box"></div>
 
     <ul class="pseudo-list">
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-        <li>Item 4</li>
+        <li>Lempipelit</li>
+        <li>Eldden Ring</li>
+        <li>Red Dead Redemption 2</li>
+        <li>God Of War</li>
       </ul>
 
       <blockquote class="quote">
