--- a/WS03_CSS-Advanced/index.html
+++ b/WS03_CSS-Advanced/index.html
@@ -57,7 +57,7 @@
 
     <ul class="pseudo-list">
         <li>Lempipelit</li>
-        <li>Eldden Ring</li>
+        <li>Elden Ring</li>
         <li>Red Dead Redemption 2</li>
         <li>God Of War</li>
       </ul>
