--- a/WS04_Layout/index.html
+++ b/WS04_Layout/index.html
@@ -11,6 +11,27 @@
     <title>My First HTML Page</title>
   </head>
   <body>
+    <header>
+    <h1>My Website</h1>
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  
+  <main>
+    <section id="about">
+      <h2>About Me</h2>
+      <p>This is a paragraph about me.</p>
+    </section>
+  </main>
+  
+  <footer>
+    <p>Copyright 2025</p>
+  </footer>
     <h1 style="color: red">Joni Tuunanen</h1>
     <h1>Welcome to my Page</h1>
     <p>You have just landed on the best page</p>
