--- a/index.html
+++ b/index.html
@@ -11,6 +11,27 @@
     <title>My First HTML Page</title>
   </head>
   <body>
+    <header>
+    <h1>My Website</h1>
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  
+  <main>
+    <section id="about">
+      <h2>About Me</h2>
+      <p>This is a paragraph about me.</p>
+    </section>
+  </main>
+  
+  <footer>
+    <p>Copyright 2025</p>
+  </footer>
     <h1 style="color: red">Joni Tuunanen</h1>
     <h1>Welcome to my Page</h1>
     <p>You have just landed on the best page</p>
@@ -62,5 +83,23 @@
     <blockquote class="quote">
       "The only way to do great work is to love what you do." - Steve Jobs
     </blockquote>
+  </body>
+</html>
+<div class="flex-container">
+    <div class="box">Box 1</div>
+    <div class="box">Box 2</div>
+    <div class="box">Box 3</div>
+  </div>
+
+<div class="grid-container">
+    <div class="grid-item">1</div>
+    <div class="grid-item">2</div>
+    <div class="grid-item">3</div>
+    <div class="grid-item">4</div>
+    <div class="grid-item">5</div>
+    <div class="grid-item">6</div>
+  </div>
+<div class="responsive-box">Resize the window to see the effect</div>
+
   </body>
 </html>
