--- a/index.html
+++ b/index.html
@@ -100,5 +100,11 @@
   </div>
 <div class="responsive-box">Resize the window to see the effect</div>
 
+<div class="responsive-container">
+      <div class="column">Column 1</div>
+      <div class="column">Column 2</div>
+    </div>
+
+<img src="https://opeth.com/images/Opeth-logo-white.png#joomlaImage://local-images/Opeth-logo-white.png?width=250&height=202" alt="Opeth" class="responsive-image">
   </body>
 </html>
