--- a/index.html
+++ b/index.html
@@ -105,6 +105,15 @@
       <div class="column">Column 2</div>
     </div>
 
-<img src="https://opeth.com/images/Opeth-logo-white.png#joomlaImage://local-images/Opeth-logo-white.png?width=250&height=202" alt="Opeth" class="responsive-image">
+<img src="c:\Users\jonit\Desktop\Iphone 13 Pro kuvat\201906__\LBVT1785.JPEG" alt="Muse" class="responsive-image">
+<div class="media-query-box">Resize the window to see the effect</div>
+<nav class="responsive-nav">
+      <button class="menu-toggle">☰ Menu</button>
+      <ul class="nav-list">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
