--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US"></html>
   <head>
     <style>
       h1 {
@@ -105,7 +105,7 @@
       <div class="column">Column 2</div>
     </div>
 
-<img src="c:\Users\jonit\Desktop\Iphone13Prokuvat\201906__\LBVT1785.JPEG" alt="Muse" class="responsive-image">
+<img src="./images/LBVT1785.JPEG" alt="Muse" class="responsive-image">
 
 <div class="media-query-box">Resize the window to see the effect</div>
 
