--- a/test/index.html
+++ b/test/index.html
@@ -56,7 +56,7 @@
     </div>
 
     <div class="card" style="width:18rem;">
-      <img src="path/to/image.jpg" class="card-img-top" alt="Card Image">
+      <img src="c:\Users\jonit\Desktop\Iphone13Prokuvat\202506__\IMG_4034.HEIC" class="card-img-top" alt="Card Image">
       <div class="card-body">
         <h5 class="card-title">Card Title</h5>
         <p class="card-text">This is a simple card example using Bootstrap.</p>
