--- a/test/index.html
+++ b/test/index.html
@@ -60,7 +60,7 @@
       <div class="card-body">
         <h5 class="card-title">Card Title</h5>
         <p class="card-text">This is a simple card example using Bootstrap.</p>
-        <a href="#" class="btn btn-primary">Learn More</a>
+        <a href="#" class="btn btn-primary">Blue button</a>
       </div>
 
     <div class="alert-danger"role="danger">
