--- a/WS06_Bootstrap/index.html
+++ b/WS06_Bootstrap/index.html
@@ -32,11 +32,11 @@
 </nav>
 
 <div class="card" style="width: 18rem;">
-      <img src="c:\Users\jonit\Downloads\berni.jpg" class="card-img-top" alt="Lorna shore keikka">
+      <img src="berni.jpg" class="card-img-top" alt="Uljas koira">
       <div class="card-body">
-        <h5 class="card-title">Card Title</h5>
-        <p class="card-text">This is a simple card example using Bootstrap.</p>
-        <a href="#" class="btn btn-primary">Learn More</a>
+        <h5 class="card-title">Olisipa minulla tälläinen koira</h5>
+        <p class="card-text">Mutta olen allerginen</p>
+        <a href="#" class="btn btn-primary">Lohtua</a>
       </div>
     </div>
 
