--- a/WS07_Projekti/index.html
+++ b/WS07_Projekti/index.html
@@ -8,8 +8,9 @@
   </head>
 
   <body>
-    <h1>Jalkapallo, koko maailman laji</h1>
-
+    <h1>Jalkapallo - koko maailman laji</h1>
+    <p>Jalkapallo on maailman suosituin urheilulaji. Arviolta noin puolet maailman ihmisistä harrastaa tai seuraa sitä. Jalkapallo on kehittynyt 1800-luvulla Englannissa ja ensimmäinen peli pelattiin vuonna 1863. Jalkapalloa pelataan 11 pelaajan joukkueessa joista 10 on kenttäpelaajia ja 1 maalivahti.
+      Jalkapallokenttä on kooltaan vähän vaihteleva muuta UEFA:n suosituksen mukainen kenttä on 105 metriä pitkä ja 65 metriä leveä. </p>
     <div id="carouselExampleCaptions" class="carousel slide">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -18,20 +19,32 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="jalkapallo.jpg" class="d-block w-100" alt="jalkapallo">
+      <img src="images/jalkapallo.jpg" class="d-block w-100" alt="jalkapallo">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>First slide label</h5>
+        <p>Some representative placeholder content for the first slide.</p>
+      </div>
     </div>
     <div class="carousel-item">
-      <img src="barca.jpg" class="d-block w-100" alt="Barca">
+      <img src="images/barca.jpg" class="d-block w-100" alt="camp nou">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Second slide label</h5>
+        <p>Some representative placeholder content for the second slide.</p>
+      </div>
     </div>
     <div class="carousel-item">
-      <img src="lionel-andres-messi" class="d-block w-100" alt="Messi">
+      <img src="images/lionel-andres-messi.jpg" class="d-block w-100" alt="Messi">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+        <p>Some representative placeholder content for the third slide.</p>
+      </div>
     </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
