--- a/WS07_Projekti/Eurooppa Liiga.html
+++ b/WS07_Projekti/Eurooppa Liiga.html
@@ -7,6 +7,35 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   </head>
 <body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Eri kilpailuja</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Top 5 Liigat</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Mestareiden Liiga</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Eurooppa Liiga</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+       <form class="d-flex" role="search">
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
+    </div>
+  </div>
+</nav>
+
   <div class="container text-center">
   <div class="row">
     <div class="col">
@@ -20,4 +49,6 @@
     </div>
   </div>
 </div>
+<footer>Joni Tuunanen 2025 </footer>
 </body>
+</html>
