--- a/WS07_Projekti/index.html
+++ b/WS07_Projekti/index.html
@@ -50,22 +50,22 @@
     <div class="carousel-item active">
       <img src="images/jalkapallo.jpg" class="d-block w-100" alt="jalkapallo">
       <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
+        <h5>Optimaaliset olosuhteet pelata jalkapalloa</h5>
+        <p>Auringonlasku kesäisenä iltana.</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="images/barca.jpg" class="d-block w-100" alt="camp nou">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
+        <h5>Camp Nou</h5>
+        <p>FC Barcelonan kotiareena.</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="images/lionel-andres-messi.jpg" class="d-block w-100" alt="Messi">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+        <h5>Maailman paras jalkapalloilija</h5>
+        <p>Mielestäni Messi on kautta aikojen paras pelaaja.</p>
       </div>
     </div>
   </div>
