--- a/WS07_Projekti/Top 5 Liigat.html
+++ b/WS07_Projekti/Top 5 Liigat.html
@@ -35,21 +35,22 @@
     </div>
   </div>
 </nav>
-<img src="images/valioliiga.jpg" class="rounded float-start" alt="valioliiga logo">
-<img src="images/prem Trophy.jpg" class="rounded float-end" alt="valioliiga pokaali">
-<p></p>
-<img src="images/Laliga.jpg" class="rounded float-start" alt="LaLiga">
-<img src="images/Laligatrophy.jpg" class="rounded float-end" alt="Laligatrophy">
-<p></p>
-<img src="images/SerieA.jpg" class="rounded float-start" alt="Serie A">
-<img src="images/SerieATrophy.jpg" class="rounded float-end" alt="Serie A Trophy">
-<p></p>
-<img src="images/Bundesliga.jpg" class="rounded float-start" alt="Bundesliga">
-<img src="images/BundesligaTrophy.jpg" class="rounded float-end" alt="Bundesliga Trophy">
-<p></p>
-<img src="images/Ligue1.jpg" class="rounded float-start" alt="Ligue 1">
-<img src="images/Ligue1Trophy.jpg" class="rounded float-end" alt="
+<img src="images/valioliiga.jpg" class="img-fluid" alt="valioliiga logo">
+<img src="images/prem Trophy.jpg" class="img-fluid" alt="valioliiga pokaali">
+<p>Englannin liigan, Valioliigan logo ja palkintopokaali</p>
+<img src="images/Laliga.jpg" class="img-fluid" alt="LaLiga">
+<img src="images/Laligatrophy.jpg" class="img-fluid" alt="Laligatrophy">
+<p>Espanjan liigan, La Ligan logo ja palkintopokaali</p>
+<img src="images/seriealogo.jpg" class="img-fluid" alt="Serie A">
+<img src="images/SerieATrophy.jpg" class="img-fluid" alt="Serie A Trophy">
+<p>Italian liigan, Serie A:n logo ja palkintopokaali</p>
+<img src="images/Bundesliga.jpg" class="img-fluid" alt="Bundesliga">
+<img src="images/BundesligaTrophy.jpg" class="img-fluid" alt="Bundesliga Trophy">
+<p>Saksan liigan, Bundesliigan logo ja palkintopokaali</p>
+<img src="images/Ligue1.jpg" class="img-fluid" alt="Ligue 1">
+<img src="images/Ligue1Trophy.jpg" class="img img-fluid" alt="
 Ligue 1 Trophy">
+<p>Ranskan liigan, Ligue 1:n logo ja palkintopokaali</p>
 
 <footer>Joni Tuunanen 2025 </footer>
 </body>
