--- a/WS07_Projekti/index.html
+++ b/WS07_Projekti/index.html
@@ -38,7 +38,7 @@
 </nav>
 
     <h1>Jalkapallo - koko maailman laji</h1>
-    <p>Jalkapallo on maailman suosituin urheilulaji. Arviolta noin puolet maailman ihmisistä harrastaa tai seuraa sitä. Jalkapallo on kehittynyt 1800-luvulla Englannissa ja ensimmäinen peli pelattiin vuonna 1863. Jalkapalloa pelataan 11 pelaajan joukkueessa joista 10 on kenttäpelaajia ja 1 maalivahti.
+    <p>Jalkapallo on maailman suosituin urheilulaji. Arviolta noin puolet maailman ihmisistä harrastaa tai seuraa sitä. Jalkapallo on kehittynyt 1800-luvulla Englannissa ja ensimmäinen peli pelattiin vuonna 1863. Jalkapalloa pelataan 11 pelaajan joukkueissa joista 10 on kenttäpelaajia ja 1 maalivahti.
       Jalkapallokenttä on kooltaan vähän vaihteleva muuta UEFA:n suosituksen mukainen kenttä on 105 metriä pitkä ja 65 metriä leveä. </p>
     <div id="carouselExampleCaptions" class="carousel slide">
   <div class="carousel-indicators">
