--- a/WS07_Projekti/Eurooppa Liiga.html
+++ b/WS07_Projekti/Eurooppa Liiga.html
@@ -22,7 +22,7 @@
           <a class="nav-link" href="#">Mestareiden Liiga</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Eurooppa Liiga</a>
+         <li><a class="nav-link active" aria-current="page"href="#">Eurooppa Liiga</a></li>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" aria-disabled="true">Disabled</a>
