--- a/WS07_Projekti/Mestareiden Liiga.html
+++ b/WS07_Projekti/Mestareiden Liiga.html
@@ -19,7 +19,7 @@
           <a class="nav-link active" aria-current="page" href="#">Top 5 Liigat</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Mestareiden Liiga</a>
+          <a class="nav-link active" aria-current="page" href="#">Mestareiden Liiga</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Eurooppa Liiga</a>
