--- a/WS07_Projekti/index.html
+++ b/WS07_Projekti/index.html
@@ -8,35 +8,20 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Eri kilpailuja</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Top 5 Liigat</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Mestareiden Liiga</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Eurooppa Liiga</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
-       <form class="d-flex" role="search">
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-      <button class="btn btn-outline-success" type="submit">Search</button>
-    </form>
-    </div>
-  </div>
-</nav>
-
+<ul class="nav nav-tabs">
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="index.html" href="#">Jalkapallo</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="Euroopanliigat.html" href="#">Euroopan liigat</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="MestareidenLiiga.html" href="#">Mestareiden Liiga</a>
+  </li>
+  <li class="nav-item">
+     <a class="nav-link" href="EurooppaLiiga.html" href="#">Eurooppa Liiga</a>
+  </li>
+</ul>
     <h1>Jalkapallo - koko maailman laji</h1>
     <p>Jalkapallo on maailman suosituin urheilulaji. Arviolta noin puolet maailman ihmisistä harrastaa tai seuraa sitä. Jalkapallo on kehittynyt 1800-luvulla Englannissa ja ensimmäinen peli pelattiin vuonna 1863. Jalkapalloa pelataan 11 pelaajan joukkueissa joista 10 on kenttäpelaajia ja 1 maalivahti.
       Jalkapallokenttä on kooltaan vähän vaihteleva muuta UEFA:n suosituksen mukainen kenttä on 105 metriä pitkä ja 65 metriä leveä. </p>
