--- a/WS07_Projekti/Euroopanliigat.html
+++ b/WS07_Projekti/Euroopanliigat.html
@@ -22,21 +22,20 @@
      <a class="nav-link" href="EurooppaLiiga.html" href="#">Eurooppa Liiga</a>
   </li>
 </ul>
-<img src="images/valioliiga.jpg" class="img-fluid" alt="valioliiga logo">
-<img src="images/prem Trophy.jpg" class="img-fluid" alt="valioliiga pokaali">
+<img src="images/valioliiga.jpg" class="img-fluid" alt="valioliigalogo" id="valioliiga">
+<img src="images/prem Trophy.jpg" class="img-fluid" alt="valioliigapokaali" id="Valioliigapokaali">
 <p>Englannin liigan, Valioliigan logo ja palkintopokaali</p>
-<img src="images/Laliga.jpg" class="img-fluid" alt="LaLiga">
-<img src="images/Laligatrophy.jpg" class="img-fluid" alt="Laligatrophy">
+<img src="images/Laliga.jpg" class="img-fluid" alt="LaLiga" id="Laliga">
+<img src="images/Laligatrophy.jpg" class="img-fluid" alt="Laligatrophy" id="LaLigapokaali">
 <p>Espanjan liigan, La Ligan logo ja palkintopokaali</p>
-<img src="images/seriealogo.jpg" class="img-fluid" alt="Serie A">
-<img src="images/SerieATrophy.jpg" class="img-fluid" alt="Serie A Trophy">
+<img src="images/seriealogo.jpg" class="img-fluid" alt="SerieA" id="SerieA">
+<img src="images/SerieATrophy.jpg" class="img-fluid" alt="SerieATrophy" id="Serieapokaali">
 <p>Italian liigan, Serie A:n logo ja palkintopokaali</p>
-<img src="images/Bundesliga.jpg" class="img-fluid" alt="Bundesliga">
-<img src="images/BundesligaTrophy.jpg" class="img-fluid" alt="Bundesliga Trophy">
+<img src="images/Bundesliga.jpg" class="img-fluid" alt="Bundesliga" id="Bundesliiga">
+<img src="images/BundesligaTrophy.jpg" class="img-fluid" alt="Bundesliga Trophy" id="Bundesliigapalkinto">
 <p>Saksan liigan, Bundesliigan logo ja palkintopokaali</p>
-<img src="images/Ligue1.jpg" class="img-fluid" alt="Ligue 1">
-<img src="images/Ligue1Trophy.jpg" class="img img-fluid" alt="
-Ligue 1 Trophy">
+<img src="images/Ligue1.jpg" class="img-fluid" alt="Ligue 1" id="Ligue1">
+<img src="images/Ligue1Trophy.jpg" class="img img-fluid" alt="Ligue 1 Trophy" id="Ligue1pokaali">
 <p>Ranskan liigan, Ligue 1:n logo ja palkintopokaali</p>
 
 <footer>Joni Tuunanen 2025 </footer>
