--- a/WS07_Projekti/MestareidenLiiga.html
+++ b/WS07_Projekti/MestareidenLiiga.html
@@ -27,43 +27,43 @@
   <thead>
     <tr>
       <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
+      <th scope="col">Seura</th>
+      <th scope="col">Mestaruudet</th>
+      <th scope="col">Mestaruusvuodet</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
+      <td>Real Madrid</td>
+      <td>15</td>
+      <td>1956,1957,1958,1959,1960,1966,1998,2000,2002,2014,2016,2017,2018,2022,2024</td>
       <table class="table table-striped">
     </tr>
     <tr>
       <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
+      <td>AC Milan</td>
+      <td>7</td>
+      <td>1963.1969,1989,1990,1994,2003,2007</td>
     </tr>
     <tr>
       <th scope="row">3</th>
-      <td>John</td>
-      <td>Doe</td>
-      <td>@social</td>
+      <td>Bayern Munchen</td>
+      <td>6</td>
+      <td>1974,1975,1976,2001,2013,2020</td>
       <table class="table table-striped">
     </tr>
  <tr>
       <th scope="row">4</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
+      <td>Liverpool</td>
+      <td>6</td>
+      <td>1977,1978,1981,1984,2005,2019</td>
     </tr>
      <tr>
       <th scope="row">5</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
+      <td>FC Barcelona</td>
+      <td>5</td>
+      <td>1992,2006,2009,2011,2015</td>
       <table class="table table-dark table-striped">
     </tr>
   </tbody>
