--- a/WS07_Projekti/EurooppaLiiga.html
+++ b/WS07_Projekti/EurooppaLiiga.html
@@ -23,19 +23,49 @@
   </li>
 </ul>
 
-  <div class="container text-center">
-  <div class="row">
-    <div class="col">
-      Mestaruuksien määrä
-    </div>
-    <div class="col">
-      Joukkue
-    </div>
-    <div class="col">
-      Vuosi
-    </div>
-  </div>
-</div>
+  <table class="table table-striped table-hover">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Seura</th>
+      <th scope="col">Mestaruudet</th>
+      <th scope="col">Mestaruusvuodet</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Sevilla</td>
+      <td>7</td>
+      <td>2006,2007,2014,2015,2016,2020,2023</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Inter Milan</td>
+      <td>3</td>
+      <td>1991,1994,1998</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Tottenham Hotspur</td>
+      <td>3</td>
+      <td>1972,1984,2025</td>
+    </tr>
+    <tr>
+      <th scope="row">4</th>
+      <td>Liverpool</td>
+      <td>3</td>
+      <td>1973,1976,2001</td>
+    </tr>
+    <tr>
+      <th scope="row">5</th>
+      <td>Juventus</td>
+      <td>3</td>
+      <td>1977,1990,1993</td>
+    </tr>
+  </tbody>
+</table>
+
 <footer>Joni Tuunanen 2025 </footer>
 </body>
 </html>
