--- a/WS07_Projekti/MestareidenLiiga.html
+++ b/WS07_Projekti/MestareidenLiiga.html
@@ -22,6 +22,9 @@
      <a class="nav-link" href="EurooppaLiiga.html" href="#">Eurooppa Liiga</a>
   </li>
 </ul>
+<p>Mestareiden liiga on Uefan järjestämä vuosittain pelattava jalkapallokilpailu johon osallistuvat Euroopan eri sarjojen parhaat joukkueet. Eri sarjoilla on eri määrä osallistuvia joukkueita. Mestareien ligia alkoi vuonna 1992 korvaten entisen Euroopan cupin.
+  Turnaus on siis sama mutta vain uudella nimellä. Mestareiden liigan voittaja saa pelioikeuden seuraavan kauden Euroopan supercupiin ja FIFA:n klubimaailman mestaruuskilpailuun. </p>
+</p>
 
 <table class="table">
   <thead>
