--- a/WS07_Projekti/Euroopanliigat.html
+++ b/WS07_Projekti/Euroopanliigat.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Euroopan Top 5 Liigat</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+     <link rel="stylesheet" type="text/css" href="./styles/external.css">
   </head>
 
 <body>
@@ -22,20 +23,20 @@
      <a class="nav-link" href="EurooppaLiiga.html" href="#">Eurooppa Liiga</a>
   </li>
 </ul>
-<img src="images/valioliiga.jpg" class="img-fluid" alt="valioliigalogo" id="valioliiga">
-<img src="images/prem Trophy.jpg" class="img-fluid" alt="valioliigapokaali" id="Valioliigapokaali">
+<img src="images/valioliiga.jpg" class="img-fluid" alt="valioliigalogo">
+<img src="images/prem Trophy.jpg" class="img-fluid" alt="valioliigapokaali">
 <p>Englannin liigan, Valioliigan logo ja palkintopokaali</p>
-<img src="images/Laliga.jpg" class="img-fluid" alt="LaLiga" id="Laliga">
-<img src="images/Laligatrophy.jpg" class="img-fluid" alt="Laligatrophy" id="LaLigapokaali">
+<img src="images/Laliga.jpg" class="img-fluid" alt="LaLiga">
+<img src="images/Laligatrophy.jpg" class="img-fluid" alt="Laligatrophy">
 <p>Espanjan liigan, La Ligan logo ja palkintopokaali</p>
-<img src="images/seriealogo.jpg" class="img-fluid" alt="SerieA" id="SerieA">
-<img src="images/SerieATrophy.jpg" class="img-fluid" alt="SerieATrophy" id="Serieapokaali">
+<img src="images/seriealogo.jpg" class="img-fluid" alt="SerieA">
+<img src="images/SerieATrophy.jpg" class="img-fluid" alt="SerieATrophy">
 <p>Italian liigan, Serie A:n logo ja palkintopokaali</p>
-<img src="images/Bundesliga.jpg" class="img-fluid" alt="Bundesliga" id="Bundesliiga">
-<img src="images/BundesligaTrophy.jpg" class="img-fluid" alt="Bundesliga Trophy" id="Bundesliigapalkinto">
+<img src="images/Bundesliga.jpg" class="img-fluid" alt="Bundesliga">
+<img src="images/BundesligaTrophy.jpg" class="img-fluid" alt="Bundesliga Trophy">
 <p>Saksan liigan, Bundesliigan logo ja palkintopokaali</p>
-<img src="images/Ligue1.jpg" class="img-fluid" alt="Ligue 1" id="Ligue1">
-<img src="images/Ligue1Trophy.jpg" class="img img-fluid" alt="Ligue 1 Trophy" id="Ligue1pokaali">
+<img src="images/Ligue1.jpg" class="img-fluid" alt="Ligue 1">
+<img src="images/Ligue1Trophy.jpg" class="img img-fluid" alt="Ligue 1 Trophy">
 <p>Ranskan liigan, Ligue 1:n logo ja palkintopokaali</p>
 
 <footer>Joni Tuunanen 2025 </footer>
