--- a/WS07_Projekti/Euroopanliigat.html
+++ b/WS07_Projekti/Euroopanliigat.html
@@ -39,6 +39,15 @@
 <img src="images/Ligue1Trophy.jpg" class="img img-fluid" alt="Ligue 1 Trophy">
 <p>Ranskan liigan, Ligue 1:n logo ja palkintopokaali</p>
 
+<style>
+      footer {
+        text-align: center;
+        padding: 10px;
+        background-color: hsl(0, 76%, 45%);
+        margin-top: 20px;
+      }
+    </style>
+
 <footer>Joni Tuunanen 2025 </footer>
 </body>
 </html>
