--- a/WS07_Projekti/MestareidenLiiga.html
+++ b/WS07_Projekti/MestareidenLiiga.html
@@ -71,6 +71,16 @@
     </tr>
   </tbody>
 </table>
+
+<style>
+      footer {
+        text-align: center;
+        padding: 10px;
+        background-color: hsl(0, 76%, 45%);
+        margin-top: 20px;
+      }
+    </style>
+    
 <footer>Joni Tuunanen 2025 </footer>
 </body>
 </html>
