--- a/WS07_Projekti/EurooppaLiiga.html
+++ b/WS07_Projekti/EurooppaLiiga.html
@@ -23,7 +23,7 @@
   </li>
 </ul>
 
-  <table class="table table-striped table-hover">
+<p>Eurooppa liiga on Mestareiden liigan "pikkuveli". Eurooppa liigaa pelattiin ensimmäisen kerran vuonna 1971 mutta se uudelleen brändättiin nykyiseen muotoonsa 2009.</p>  <table class="table table-striped table-hover">
   <thead>
     <tr>
       <th scope="col">#</th>
@@ -66,6 +66,15 @@
   </tbody>
 </table>
 
+<style>
+      footer {
+        text-align: center;
+        padding: 10px;
+        background-color: hsl(0, 76%, 45%);
+        margin-top: 20px;
+      }
+    </style>
 <footer>Joni Tuunanen 2025 </footer>
+
 </body>
 </html>
