--- a/WS07_Projekti/index.html
+++ b/WS07_Projekti/index.html
@@ -66,6 +66,14 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
+    <style>
+      footer {
+        text-align: center;
+        padding: 10px;
+        background-color: hsl(0, 76%, 45%);
+        margin-top: 20px;
+      }
+    </style>
     <footer>Joni Tuunanen 2025 </footer>
 
 </body>
