--- a/WS07_Projekti/Euroopanliigat.html
+++ b/WS07_Projekti/Euroopanliigat.html
@@ -11,16 +11,16 @@
 <body>
   <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link" href="index.html" href="#">Jalkapallo</a>
+    <a class="nav-link" href="index.html">Jalkapallo</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="Euroopanliigat.html" href="#">Euroopan liigat</a>
+    <a class="nav-link active" aria-current="page" href="Euroopanliigat.html">Euroopan liigat</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="MestareidenLiiga.html" href="#">Mestareiden Liiga</a>
+    <a class="nav-link" href="MestareidenLiiga.html">Mestareiden Liiga</a>
   </li>
   <li class="nav-item">
-     <a class="nav-link" href="EurooppaLiiga.html" href="#">Eurooppa Liiga</a>
+     <a class="nav-link" href="EurooppaLiiga.html">Eurooppa Liiga</a>
   </li>
 </ul>
 <img src="images/valioliiga.jpg" class="img-fluid" alt="valioliigalogo">
