--- a/WS07_Projekti/index.html
+++ b/WS07_Projekti/index.html
@@ -10,16 +10,16 @@
   <body>
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="index.html" href="#">Jalkapallo</a>
+    <a class="nav-link active" aria-current="page" href="index.html">Jalkapallo</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="Euroopanliigat.html" href="#">Euroopan liigat</a>
+    <a class="nav-link" href="Euroopanliigat.html">Euroopan liigat</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="MestareidenLiiga.html" href="#">Mestareiden Liiga</a>
+    <a class="nav-link" href="MestareidenLiiga.html">Mestareiden Liiga</a>
   </li>
   <li class="nav-item">
-     <a class="nav-link" href="EurooppaLiiga.html" href="#">Eurooppa Liiga</a>
+     <a class="nav-link" href="EurooppaLiiga.html">Eurooppa Liiga</a>
   </li>
 </ul>
     <h1>Jalkapallo - koko maailman laji</h1>
